# story-memory-system

./: .env.example  .gitignore  README.md  create_mira.py  pyproject.toml  requirements.txt  test_grok_extraction.py  test_pipeline.py
api/: __init__.py  dependencies.py  main.py
api/routes/: frontend.py  images.py  memory.py  stories.py
config/: __init__.py  lora_library.py  secrets.py
db/: client.py
db/migrations/: 001_initial_schema.sql  002_add_tracking_tables.sql  003_add_image_tables.sql  004_advanced_memory_system.sql
docs/: SECRET_MANAGEMENT.md
schemas/: api.py  extraction.py
services/: chat.py  context.py  extraction.py  image_gen.py  image_generation.py  prompt_suggestion.py  prompts.py  scene_generation.py  storage.py  storage_b2.py  summarization.py
static/: image-generator.html
tests/: test_extraction.py  test_image_gen.py
tests/fixtures/: sample_transcript.txt
